istio/users.gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: users-gateway
  namespace: istio-system
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: users-vs
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - users-gateway
  http:
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        host: users-be-svc.core.svc.cluster.local
        port:
          number: 80
